<resources>
    <string name="app_name">Ayesha</string>
    <string name="action_new">New tab</string>
    <string name="action_history">History</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_forward">Forward</string>
    <string name="action_about">About</string>

    <string name="hathitrust_keystore">https://elementdavv.github.io/ayesha/hathitrust/store.bks</string>
    <string name="hathitrust_keystore_password">hathitrust.org</string>
</resources>
