<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.timelegend.ayesha.MainActivity">
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_new"
        android:orderInCategory="30"
        android:title="@string/action_new"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:orderInCategory="40"
        android:title="@string/action_history"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="70"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward"
        android:orderInCategory="80"
        android:title="@string/action_forward"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
